--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo 'OK' && exit 0",
-    "lint": "./node_modules/.bin/eslint lib/ server.js"
+    "test": "npm run lint && npm run test_coverage",
+    "test_mocha": "_mocha test --recursive",
+    "test_coverage": "istanbul cover --include-all-sources -x 'test/**' --report lcov _mocha -- --recursive test && NODE_ENV=test istanbul check-coverage --statement 90 --functions 90 --lines 90 --branches 90",
+    "lint": "eslint lib/ server.js"
   },
   "repository": {
     "type": "git",
@@ -25,17 +27,19 @@
   "dependencies": {
     "boom": "^5.2.0",
     "express": "^4.15.3",
-    "request": "^2.81.0",
     "request-promise-native": "^1.0.4"
   },
   "devDependencies": {
+    "chai": "^4.1.0",
     "eslint": "^4.2.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
+    "proxyquire": "^1.8.0",
     "sinon": "^2.3.8",
     "supertest": "^3.0.0"
   }
